# shebe

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  Makefile  README.md  SECURITY.md  WHY_SHEBE.md  server.json  shebe.toml
services/shebe-server/: Cargo.toml  Dockerfile  README.md  VERSION
services/shebe-server/benches/: performance.rs
services/shebe-server/src/: config.rs  lib.rs  main.rs  xdg.rs
services/shebe-server/src/api/: handlers.rs  middleware.rs  mod.rs  state.rs
services/shebe-server/src/cli/: mod.rs  output.rs
services/shebe-server/src/core/: config.rs  error.rs  mod.rs  services.rs  types.rs  xdg.rs
services/shebe-server/src/http/: handlers.rs  mod.rs
services/shebe-server/src/indexer/: chunker.rs  pipeline.rs  walker.rs
services/shebe-server/src/mcp/: error.rs  handlers.rs  mod.rs  pagination.rs  protocol.rs  server.rs  services.rs  transport.rs  utils.rs
services/shebe-server/src/search/: bm25.rs  mod.rs
services/shebe-server/src/storage/: session.rs  tantivy.rs  validator.rs
services/shebe-server/tests/: FIND_REFERENCES_TEST_PLAN.md  api_integration.rs  cli.rs  core.rs  http.rs  integration.rs  mcp.rs  mcp_tests.rs  utf8_safety.rs
services/shebe-server/tests/cli/: test_helpers.rs  test_index.rs  test_info.rs  test_output.rs  test_references.rs  test_search.rs  test_session.rs
services/shebe-server/tests/common/: fixtures.rs  helpers.rs  mod.rs
services/shebe-server/tests/http/: api_integration.rs
services/shebe-server/tests/integration/: test_indexing.rs  test_search.rs  test_sessions.rs
services/shebe-server/tests/mcp/: find_references_tests.rs  (+4 more)
(+86 files in other folders)
